--- a/WOAHMUSIC/templates/viewChart.html
+++ b/WOAHMUSIC/templates/viewChart.html
@@ -43,9 +43,9 @@
       <div class="sidebar-heading">Woah Music </div>
       <div class="list-group list-group-flush">
         <a href="#" class="list-group-item list-group-item-action bg-light">Welcome Admin</a>
-        <a href="#" class="list-group-item list-group-item-action bg-light disabled">Notifications </a>
+        <a href="./admin.html" class="list-group-item list-group-item-action bg-light">Notifications </a>
         <a href="./addMusic.html" class="list-group-item list-group-item-action bg-light">Add Music</a>
-        <a href="./viewChart.html" class="list-group-item list-group-item-action bg-light">View Music</a>
+        <a href="#" class="list-group-item list-group-item-action bg-light disabled">View Music</a>
         </div>
     </div>
 
@@ -61,36 +61,36 @@
               </div>
             </div>
           </div>
-            <div class="alert alert-secondary">
-              <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
-              <h4>I knew you were Trouble</h4>
-              <p>Submitted by Abhishek. Sung by Taylor Swift.
-                <p>
-                <button type="button" class="btn btn-success">Move to chart</button>
-                <button type="button" class="btn btn-danger">Drop song</button>
-              </p>
-            </div>
-
-            <div class="alert alert-secondary">
-              <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
-              <h4>I knew you were Trouble</h4>
-              <p>Submitted by Abhishek. Sung by Taylor Swift.
-                <p>
-                <button type="button" class="btn btn-success">Move to chart</button>
-                <button type="button" class="btn btn-danger">Drop song</button>
-              </p>
-            </div><div class="alert alert-secondary">
-              <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
-              <h4>I knew you were Trouble</h4>
-              <p>Submitted by Abhishek. Sung by Taylor Swift.
-                <p>
-                <button type="button" class="btn btn-success">Move to chart</button>
-                <button type="button" class="btn btn-danger">Drop song</button>
-              </p>
-            </div>
-
-
-
+            <div class="container">
+                <br><br>
+  <h4>Your top charts are here.</h4>
+  <table class="table table-hover">
+    <thead>
+      <tr>
+        <th>Song</th>
+        <th>Singer</th>
+        <th>Submitted By</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>John</td>
+        <td>Doe</td>
+        <td>john@example.com</td>
+      </tr>
+      <tr>
+        <td>Mary</td>
+        <td>Moe</td>
+        <td>mary@example.com</td>
+      </tr>
+      <tr>
+        <td>July</td>
+        <td>Dooley</td>
+        <td>july@example.com</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
 
         </main>
 <script src="../static/js/bootstrap.min.js"></script>
