--- a/WOAHMUSIC/templates/login.html
+++ b/WOAHMUSIC/templates/login.html
@@ -24,13 +24,13 @@
     <link href="../static/css/signin.css" rel="stylesheet">
   </head>
   <body class="text-center">
-    <form class="form-signin">
+    <form class="form-signin" action="./admin.html">
   <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
   <label for="inputEmail" class="sr-only">Email address</label>
   <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
   <label for="inputPassword" class="sr-only">Password</label>
   <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-        <button class="btn btn-lg btn-primary btn-block" type="submit" ><a href= "./admin.html"">Sign in</a></button>
+        <button class="btn btn-lg btn-primary btn-block" type="submit" >Sign in</button>
 </form>
 </body>
 </html>
