--- a/WOAHMUSIC/templates/viewChart.html
+++ b/WOAHMUSIC/templates/viewChart.html
@@ -42,7 +42,7 @@
         <div class="bg-light border-right" id="sidebar-wrapper">
       <div class="sidebar-heading">Woah Music </div>
       <div class="list-group list-group-flush">
-        <a href="#" class="list-group-item list-group-item-action bg-light">Welcome Admin</a>
+        <a href="./index.html" class="list-group-item list-group-item-action bg-light ">Welcome Admin</a>
         <a href="./admin.html" class="list-group-item list-group-item-action bg-light">Notifications </a>
         <a href="./addMusic.html" class="list-group-item list-group-item-action bg-light">Add Music</a>
         <a href="#" class="list-group-item list-group-item-action bg-light disabled">View Music</a>
