--- a/WOAHMUSIC/templates/index.html
+++ b/WOAHMUSIC/templates/index.html
@@ -16,7 +16,7 @@
       <p>This is an attempt to create a classical model to create a music recommendation chart. This attempt with also focus on sorting music based solely on the will of the creator.
 Appearing globally, you can add music based of all genres for people to see and get good personalised playlist for themselves.
 </p>
-      <p><a class="btn btn-primary btn float-right" href="./login.html" role="button">Admins Here &raquo;</a></p>
+      <p><a class="btn btn-primary btn float-right" href="{{ url_for('login') }}" role="button">Admins Here &raquo;</a></p>
     </div>
   </div>
 
