--- a/WOAHMUSIC/templates/addMusic.html
+++ b/WOAHMUSIC/templates/addMusic.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>| Administration |</title>
-    <link rel="stylesheet" href="../static/css/bootstrap.css">
-    <style>
+{% extends 'base.html' %}
+{%block style%}
  #sidebar-wrapper {
   min-height: 100vh;
   margin-left: -15rem;
@@ -31,38 +26,12 @@
   #sidebar-wrapper {
     margin-left: 0;
   }
-
-    </style>
-</head>
-
-<body>
-
-    <div class="container-fluid ">
-      <div class="row">
-        <div class="bg-light border-right" id="sidebar-wrapper">
-      <div class="sidebar-heading">Woah Music </div>
-      <div class="list-group list-group-flush">
-        <a href="./index.html" class="list-group-item list-group-item-action bg-light ">Welcome Admin</a>
-        <a href="./admin.html" class="list-group-item list-group-item-action bg-light">Notifications </a>
-        <a href="#" class="list-group-item list-group-item-action bg-light disabled">Add Music</a>
-        <a href="./viewChart.html" class="list-group-item list-group-item-action bg-light">View Music</a>
-        </div>
-    </div>
-
-        <main role="main" class="col-lg-10 col-md-8 ml-sm-auto px-4 ">
-          <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-            <h1 class="h2">Dashboard</h1>
-            <div class="btn-toolbar mb-2 mb-md-0">
-              <div class="btn-group mr-2">
-                <button class="btn btn-sm btn-outline-secondary">Add</button>
+{% endblock%}
+{%block pagename%} Add Your Music {% endblock %}
 
 
-                <button class="btn btn-sm btn-outline-secondary">View</button>
-              </div>
-            </div>
-          </div>
-            <div class="container">
-                <br><br>
+ {%block content %}
+<br><br>
 <form>
   <div class="form-group row">
     <label for="staticEmail" class="col-sm-2 col-form-label">Song's Name:</label>
@@ -78,7 +47,4 @@
   </div>
 <button type="submit" class="btn btn-primary">Add Music</button>
 </form>
-        </main>
-<script src="../static/js/bootstrap.min.js"></script>
-</body>
-</html>
+{%endblock %}
