Major Bugs Fixed

--- a/WOAHMUSIC/templates/base.html
+++ b/WOAHMUSIC/templates/base.html
@@ -30,7 +30,7 @@
               <div class="btn-group mr-3">
                 <a class="btn btn-sm btn-outline-secondary" href="{{url_for('add_music')}}">Add</a>
                 <a class="btn btn-sm btn-outline-secondary" href="{{url_for('view_chart')}}">View</a>
-                <a class="btn btn-sm btn-outline-secondary" href="{{ url_for('main') }}">Logout</a>
+                <a class="btn btn-sm btn-outline-secondary" href="{{ url_for('logout') }}">Logout</a>
               </div>
             </div>
           </div>
