--- a/WOAHMUSIC/templates/index.html
+++ b/WOAHMUSIC/templates/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>| WELCOME |</title>
   <link rel="stylesheet" href="../static/css/bootstrap.css">
   <link rel="stylesheet" href="../static/css/footer.css">
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 </head>
 <body class="d-flex flex-column h-100">
 
@@ -21,6 +23,20 @@ Appearing globally, you can add music based of all genres for people to see and 
   </div>
 
   <div class="container">
+    {%if get%}
+    <div class="alert alert-success alert-dismissible fade show">
+      <strong>Your recommendation has been sent successfully.</strong>
+      <button type="button" class="close" data-dismiss="alert">&times;</button>
+      </div>
+      <script>
+        window.setTimeout(function(){
+          $(".alert").fadeTo(1000,0).slideUp(1000, function(){
+            $(this).remove();
+          });
+        }, 2000);
+
+      </script>
+    {%endif%}
   <h2>Hello there!</h2>
   <form method="POST" action="{{ url_for('getData') }}">
     <div class="row">
