--- a/WOAHMUSIC/templates/login.html
+++ b/WOAHMUSIC/templates/login.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
+    <script
+  src="https://code.jquery.com/jquery-3.4.1.min.js"
+  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+  crossorigin="anonymous"></script>
+
 <style>
       .bd-placeholder-img {
         font-size: 1.125rem;
@@ -24,7 +29,26 @@
     <link href="../static/css/signin.css" rel="stylesheet">
   </head>
   <body class="text-center">
+    
     <form class="form-signin" method="POST" action="{{ url_for('loginCheck') }}">
+
+      {%if loginMessage%}
+    <div class="alert alert-danger alert-dismissible fade show">
+      <strong>Invalid User.</strong>
+      <button type="button" class="close" data-dismiss="alert">&times;</button>
+      </div>
+      <script>
+        window.setTimeout(function(){
+          $(".alert").fadeTo(500,0).slideUp(500, function(){
+            $(this).remove();
+          });
+        }, 2000);
+  
+      </script>
+    {%endif%}
+
+    
+
   <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
   <label for="inputEmail" class="sr-only">Email address</label>
   <input type="email" id="inputEmail" name="email" class="form-control" placeholder="Email address" required autofocus>
@@ -32,5 +56,6 @@
   <input type="password" id="inputPassword" name="pass" class="form-control" placeholder="Password" required>
         <button class="btn btn-lg btn-primary btn-block" type="submit" >Sign in</button>
 </form>
+<script src="../static/js/bootstrap.min.js"></script>
 </body>
 </html>
