--- a/WOAHMUSIC/templates/index.html
+++ b/WOAHMUSIC/templates/index.html
@@ -34,10 +34,11 @@ Appearing globally, you can add music based of all genres for people to see and 
             $(this).remove();
           });
         }, 2000);
-\
+
       </script>
     {%endif%}
   <h2>Hello there!</h2>
+  <p> Mention below the song which gets you going. We all would enjoy listening to that. </p>
   <form method="POST" action="{{ url_for('getData') }}">
     <div class="row">
       <div class="col">
