--- a/WOAHMUSIC/templates/addMusic.html
+++ b/WOAHMUSIC/templates/addMusic.html
@@ -32,6 +32,7 @@
 
  {%block content %}
 <br><br>
+<div class="container">
 <form method="POST" action="{{url_for('add_music_admin')}}">
   <div class="form-group row">
     <label for="staticEmail" class="col-sm-2 col-form-label">Song's Name:</label>
@@ -47,4 +48,5 @@
   </div>
 <button type="submit" class="btn btn-primary">Add Music</button>
 </form>
+</div>
 {%endblock %}
