--- a/WOAHMUSIC/templates/viewChart.html
+++ b/WOAHMUSIC/templates/viewChart.html
@@ -30,9 +30,11 @@
 {% endblock %}
 {%block pagename%} View Chart {% endblock %}
 {%block content %}
+
+<div class="conatiner" style="margin-left: 0.8rem;">
 <br><br>
   <h4>Your top charts are here.</h4>
-  <table class="table table-hover">
+  <table class="table table-hover table-responsive">
     <thead>
       <tr>
         <th>ID</th>
@@ -57,4 +59,5 @@
     </tbody>
   </table>
 </div>
+
 {%endblock %}
