--- a/WOAHMUSIC/templates/index.html
+++ b/WOAHMUSIC/templates/index.html
@@ -7,6 +7,22 @@
   <link rel="stylesheet" href="../static/css/bootstrap.css">
   <link rel="stylesheet" href="../static/css/footer.css">
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+  <style>
+    tbody {
+    display:block;
+    height:400px;
+    overflow:auto;
+}
+thead, tbody tr {
+    display:table;
+    width:100%;
+    table-layout:fixed;
+}
+.check{
+  margin-right: 0px;
+  margin-bottom: 1rem;
+}
+  </style>
 </head>
 <body class="d-flex flex-column h-100">
 
@@ -19,6 +35,7 @@
 Appearing globally, you can add music based of all genres for people to see and get good personalised playlist for themselves.
 </p>
       <a class="btn btn-primary btn float-right" href="{{ url_for('login') }}" role="button">Admins Here &raquo;</a>
+      <br>
     </div>
   </div>
 
@@ -41,13 +58,13 @@ Appearing globally, you can add music based of all genres for people to see and 
   <p> Mention below the song which gets you going. We all would enjoy listening to that. </p>
   <form method="POST" action="{{ url_for('getData') }}">
     <div class="row">
-      <div class="col">
+      <div class="col-md-4 check">
         <input type="text" class="form-control" id="email" placeholder="Enter song's title" name="songname">
       </div>
-      <div class="col">
+      <div class="col-md-4 check">
         <input type="text" class="form-control" placeholder="Enter singer's name" name="singer">
       </div>
-    <div class="col">
+    <div class="col-md-4 check">
         <input type="text" class="form-control" placeholder="Enter your name" name="uname">
       </div>
     </div>
