--- a/WOAHMUSIC/templates/login.html
+++ b/WOAHMUSIC/templates/login.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Login</title>
     <script
   src="https://code.jquery.com/jquery-3.4.1.min.js"
@@ -28,7 +29,7 @@
     <link rel="stylesheet" href="../static/css/bootstrap.css">
     <link href="../static/css/signin.css" rel="stylesheet">
   </head>
-  <body class="text-center">
+  <body>
     
     <form class="form-signin" method="POST" action="{{ url_for('loginCheck') }}">
 
@@ -46,7 +47,6 @@
   
       </script>
     {%endif%}
-
     
 
   <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
