--- a/WOAHMUSIC/templates/admin.html
+++ b/WOAHMUSIC/templates/admin.html
@@ -35,7 +35,7 @@
 {%block content %}
 <div class="container">
 {%for rec in recommendations%}
-<div class="alert alert-secondary ">
+<div class="alert alert-secondary " style="word-break: break-word;">
               <a type="button" class="close" data-dismiss="alert" href="{{ url_for('drop_song', id = rec.id) }}" aria-hidden="true">×</a>
               <h4>{{ rec.Song_name }}</h4>
               <p>Singer: {{ rec.Singer_name}} <br>
@@ -43,7 +43,7 @@
                 <br>
                 Song id: {{rec.id}}
                 <p>
-                <a class="btn btn-success" href="{{ url_for('to_chart', id = rec.id) }}" role="button">Add to chart</a>
+                <a class="btn btn-success m-1" href="{{ url_for('to_chart', id = rec.id) }}" role="button">Add to chart</a>
                   <a class="btn btn-danger" href="{{ url_for('drop_song', id = rec.id) }}" role="button">Drop Song</a>
               </p>
             </div>
